add more mqtt servers

--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -76,7 +76,12 @@
   ##   example: servers = ["tcp://localhost:1883"]
   ##            servers = ["ssl://localhost:1883"]
   ##            servers = ["ws://localhost:1883"]
-  servers = ["tcp://192.168.81.34:1883"]
+  servers = ["tcp://192.168.81.34:1883",#orient-vm
+    "tcp://203.205.51.89:1883",#orient-vm
+    "tcp://192.168.82.17:1883",#orient-pc
+    "tcp://35.213.135.32:1883",#google-vm
+    "tcp://10.15.81.226:1883"#orient-laptop
+  ]
 
   ## Topics that will be subscribed to.
   topics = [
