--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -80,7 +80,8 @@
     "tcp://203.205.51.89:1883",#orient-vm
     "tcp://192.168.82.17:1883",#orient-pc
     "tcp://35.213.135.32:1883",#google-vm
-    "tcp://10.15.81.226:1883"#orient-laptop
+    "tcp://10.15.81.226:1883",#orient-laptop
+    "tcp://192.168.1.13:1883"#home-laptop
   ]
 
   ## Topics that will be subscribed to.
