--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,13 +81,17 @@ services:
     image: "chrono_config"
     environment:
       RESOURCES_PATH: "/usr/share/chronograf/resources"
-      # PUBLIC_URL : "http://localhost:8888"
+      # PUBLIC_URL : "http://localhost:8088"
       # TOKEN_SECRET : "Super5uperUdn3verGu355!"
       # GOOGLE_CLIENT_ID : "831405758394-hd2ji8h8a196tf0fi0g1c7urjsbb2sr7.apps.googleusercontent.com"
       # GOOGLE_CLIENT_SECRET : "vWlEzeYpN_3FEe9ChuUCzwhr"
       # AUTH0_DOMAIN  : "hls.au.auth0.com"
       # AUTH0_CLIENT_ID : "mJpnXc0dXR9GZhas7QdhOZnLuZJekKoG"
       # AUTH0_CLIENT_SECRET : "OjLOKt3uz61_ekShAXEcwlPti96-a14mS4pYle9Of5YQKDtn--QcWwLjcXs6nd9D"
+    # environment:
+    #   INFLUXDB_URL: http://influxdb:8086
+    #   LOUDML_URL: http://loudml:8077
+    #   KAPACITOR_URL: http://kapacitor:9092
     volumes:
       # Mount for chronograf database
       - ./chronograf/data/:/var/lib/chronograf/
@@ -99,11 +103,12 @@ services:
       - infra-network
     ports:
       # The WebUI for Chronograf is served on port 8888
-      - "8888:8888"
+      - "8088:8888"
     depends_on:
       - kapacitor
       - influxdb
       - telegraf
+      - loudml
 
   # documentation:
   #   build:
@@ -112,12 +117,13 @@ services:
   #     - "3010:3000"
 
   loudml:
-    image: loudml/loudml:latest-devel
+    container_name: loudml
+    image: loudml/loudml:1.6.0
     volumes:
       - ./loudml/var/lib:/var/lib/loudml
       - ./loudml/etc/config.yml:/etc/loudml/config.yml:ro
       - ./loudml/etc/model.json:/etc/loudml/model.json:ro
-      - var_loudml
+      - ./loudml/var:/var/loudml
     ports:
       - "8077:8077"
     depends_on:
