--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,6 +89,18 @@ services:
       # AUTH0_DOMAIN  : "hls.au.auth0.com"
       # AUTH0_CLIENT_ID : "mJpnXc0dXR9GZhas7QdhOZnLuZJekKoG"
       # AUTH0_CLIENT_SECRET : "OjLOKt3uz61_ekShAXEcwlPti96-a14mS4pYle9Of5YQKDtn--QcWwLjcXs6nd9D"
+
+      # GENERIC_CLIENT_ID: "chronograf"
+      # GENERIC_CLIENT_SECRET: "IEvgIBADANLgkqhkiG9w0BAQEFAASCB"
+      # GENERIC_AUTH_URL: "https://localhost:44300/connect/authorize"
+      # GENERIC_TOKEN_URL: "https://localhost:44300/connect/token"
+      # USE_ID_TOKEN: "true"
+      # JWKS_URL: "https://localhost:44300/.well-known/openid-configuration"
+      # GENERIC_API_URL: "https://localhost:44300/connect/userinfo"
+      # GENERIC_API_KEY: "upn"
+      # GENERIC_SCOPES: "openid"
+      # TOKEN_SECRET: "IEvgIBADANLgkqhkiG9w0BAQEFAASCB"
+
     # environment:
     #   INFLUXDB_URL: http://influxdb:8086
     #   LOUDML_URL: http://loudml:8077
