--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -29,10 +29,10 @@
   perdevice = true
   total = false
   
-[[inputs.cpu]]
-[[inputs.system]]
-[[inputs.influxdb]]
-  urls = ["http://influxdb:8086/debug/vars"]
+# [[inputs.cpu]]
+# [[inputs.system]]
+# [[inputs.influxdb]]
+#   urls = ["http://influxdb:8086/debug/vars"]
 [[inputs.syslog]]
 #   ## Specify an ip or hostname with port - eg., tcp://localhost:6514, tcp://10.0.0.1:6514
 #   ## Protocol, address and port to host the syslog receiver.
