--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,7 +70,7 @@ services:
     #   LOUDML_URL: http://loudml:8077
     #   KAPACITOR_URL: http://kapacitor:9092
     volumes:
-      - var_chronograf
+      # - var_chronograf
       # Mount for chronograf database
       - ./chronograf/data/:/var/lib/chronograf/
     # links:
