--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -15,131 +15,21 @@
 
 [[outputs.influxdb]]
   urls = ["http://influxdb:8086"]
-  database = "telegraf"
-  username = ""
-  password = ""
+  database = "sensors"
+  username = "telegraf"
+  password = "Asdfgh123456"
   retention_policy = ""
   write_consistency = "any"
   timeout = "5s"
 
-[[inputs.docker]]
-  endpoint = "unix:///var/run/docker.sock"
-  container_names = []
-  timeout = "5s"
-  perdevice = true
-  total = false
-  
-[[inputs.cpu]]
-[[inputs.system]]
-[[inputs.influxdb]]
-  urls = ["http://influxdb:8086/debug/vars"]
-[[inputs.syslog]]
-#   ## Specify an ip or hostname with port - eg., tcp://localhost:6514, tcp://10.0.0.1:6514
-#   ## Protocol, address and port to host the syslog receiver.
-#   ## If no host is specified, then localhost is used.
-#   ## If no port is specified, 6514 is used (RFC5425#section-4.1).
-  server = "tcp://localhost:6514"
-
-# [[inputs.mongodb]]
-#   ## An array of URLs of the form:
-#   ##   "mongodb://" [user ":" pass "@"] host [ ":" port]
-#   ## For example:
-#   ##   mongodb://user:auth_key@10.10.3.30:27017,
-#   ##   mongodb://10.10.3.33:18832,
-#   servers = ["mongodb://ditto-mongodb:27017"]
-
-#   ## When true, collect cluster status.
-#   ## Note that the query that counts jumbo chunks triggers a COLLSCAN, which
-#   ## may have an impact on performance.
-#   # gather_cluster_status = true
-
-#   ## When true, collect per database stats
-#   # gather_perdb_stats = false
-
-#   ## When true, collect per collection stats
-#   # gather_col_stats = false
-
-#   ## List of db where collections stats are collected
-#   ## If empty, all db are concerned
-#   # col_stats_dbs = ["local"]
-
-#   ## Optional TLS Config
-#   # tls_ca = "/etc/telegraf/ca.pem"
-#   # tls_cert = "/etc/telegraf/cert.pem"
-#   # tls_key = "/etc/telegraf/key.pem"
-#   ## Use TLS but skip chain & host verification
-#   # insecure_skip_verify = false
-
 [[inputs.mqtt_consumer]]
-  ## Broker URLs for the MQTT server or cluster.  To connect to multiple
-  ## clusters or standalone servers, use a seperate plugin instance.
-  ##   example: servers = ["tcp://localhost:1883"]
-  ##            servers = ["ssl://localhost:1883"]
-  ##            servers = ["ws://localhost:1883"]
-  servers = ["tcp://192.168.81.34:1883",#orient-vm
-    "tcp://203.205.51.89:1883",#orient-vm
-    "tcp://192.168.82.17:1883",#orient-pc
-    "tcp://35.213.135.32:1883",#google-vm
-    "tcp://10.15.81.226:1883",#orient-laptop
-    "tcp://192.168.1.13:1883"#home-laptop
+  servers = [
+    "tcp://emqx:1883"#home-laptop
   ]
 
   ## Topics that will be subscribed to.
   topics = [
-    "telegraf/host01/cpu",
-    "telegraf/+/mem",
-    "ditto/out/#",
+    "sensors/#",
   ]
 
-  ## The message topic will be stored in a tag specified by this value.  If set
-  ## to the empty string no topic tag will be created.
-  # topic_tag = "topic"
-
-  ## QoS policy for messages
-  ##   0 = at most once
-  ##   1 = at least once
-  ##   2 = exactly once
-  ##
-  ## When using a QoS of 1 or 2, you should enable persistent_session to allow
-  ## resuming unacknowledged messages.
-  # qos = 0
-
-  ## Connection timeout for initial connection in seconds
-  # connection_timeout = "30s"
-
-  ## Maximum messages to read from the broker that have not been written by an
-  ## output.  For best throughput set based on the number of metrics within
-  ## each message and the size of the output's metric_batch_size.
-  ##
-  ## For example, if each message from the queue contains 10 metrics and the
-  ## output metric_batch_size is 1000, setting this to 100 will ensure that a
-  ## full batch is collected and the write is triggered immediately without
-  ## waiting until the next flush_interval.
-  # max_undelivered_messages = 1000
-
-  ## Persistent session disables clearing of the client session on connection.
-  ## In order for this option to work you must also set client_id to identify
-  ## the client.  To receive messages that arrived while the client is offline,
-  ## also set the qos option to 1 or 2 and don't forget to also set the QoS when
-  ## publishing.
-  # persistent_session = false
-
-  ## If unset, a random client ID will be generated.
-  # client_id = ""
-
-  ## Username and password to connect MQTT server.
-  # username = "telegraf"
-  # password = "metricsmetricsmetricsmetrics"
-
-  ## Optional TLS Config
-  # tls_ca = "/etc/telegraf/ca.pem"
-  # tls_cert = "/etc/telegraf/cert.pem"
-  # tls_key = "/etc/telegraf/key.pem"
-  ## Use TLS but skip chain & host verification
-  # insecure_skip_verify = false
-
-  ## Data format to consume.
-  ## Each data format has its own unique set of configuration options, read
-  ## more about them here:
-  ## https://github.com/influxdata/telegraf/blob/master/docs/DATA_FORMATS_INPUT.md
   data_format = "json"
