--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,12 @@
 version: '3'
 services:
   emqx:
+    container_name: emqx
     image: emqx/emqx:latest
+    ports:
+      - 18083:18083
+      - 1883:1883
+      - 8083:8083
     environment:
     - "EMQX_NAME=emqx"
     - "EMQX_HOST=node.emqx.io"
