--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -423,19 +423,19 @@ serve_from_sub_path = true
 
 #################################### Generic OAuth ##########################
 [auth.generic_oauth]
-;enabled = false
-;name = OAuth
-;allow_sign_up = true
-;client_id = some_id
-;client_secret = some_secret
-;scopes = user:email,read:org
+enabled = true
+name = OAuth
+allow_sign_up = true
+client_id = 5pi4hnftahcr59hjbnce45kto4
+client_secret = 1j0tc644qmulkcmi9krgo9l28ui7bbc4aqrtievmrul345a6vgnv
+scopes = openid email profile
 ;email_attribute_name = email:primary
 ;email_attribute_path =
 ;login_attribute_path =
 ;id_token_attribute_name =
-;auth_url = https://foo.bar/login/oauth/authorize
-;token_url = https://foo.bar/login/oauth/access_token
-;api_url = https://foo.bar/user
+auth_url = https://csc-uat.auth.ap-southeast-1.amazoncognito.com/oauth2/authorize
+token_url = https://csc-uat.auth.ap-southeast-1.amazoncognito.com/oauth2/access_token
+api_url = https://csc-uat.auth.ap-southeast-1.amazoncognito.com/user
 ;allowed_domains =
 ;team_ids =
 ;allowed_organizations =
