--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -46,10 +46,10 @@
 
 # The full public facing url you use in browser, used for redirects and emails
 # If you use reverse proxy and sub path specify full url (with sub path)
-;root_url = %(protocol)s://%(domain)s:%(http_port)s/grafana/
+root_url = %(protocol)s://%(domain)s:%(http_port)s/grafana/
 
 # Serve Grafana from subpath specified in `root_url` setting. By default it is set to `false` for compatibility reasons.
-;serve_from_sub_path = true
+serve_from_sub_path = true
 
 # Log web requests
 ;router_logging = false
@@ -435,7 +435,7 @@ scopes = openid email profile
 ;id_token_attribute_name =
 auth_url = https://csc-uat.auth.ap-southeast-1.amazoncognito.com/oauth2/authorize
 token_url = https://csc-uat.auth.ap-southeast-1.amazoncognito.com/oauth2/access_token
-api_url = https://csc-uat.auth.ap-southeast-1.amazoncognito.com/user
+api_url = https://csc-uat.auth.ap-southeast-1.amazoncognito.com/oauth2/userInfo
 ;allowed_domains =
 ;team_ids =
 ;allowed_organizations =
