--- a/grafana/grafana_proxy.conf
+++ b/grafana/grafana_proxy.conf
@@ -1,18 +1,13 @@
-server {
-    listen 80;
-    listen [::]:80;
-
-    root /usr/share/nginx/html;
-
-    index index.html;
-
-    server_name _;
-
-    access_log /var/log/nginx/grafana.access.log;
-    error_log /var/log/nginx/grafana.error.log;
-
-    location / {
-        proxy_set_header X-WEBAUTH-USER admin;
-        proxy_pass http://127.0.0.1:3000;
-    }
+location /grafana/ {
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header Host $host;
+    #proxy_pass_header Set-Cookie;
+    #proxy_set_header X-WEBAUTH-USER admin;
+    #proxy_set_header Cookie $http_cookie;
+    proxy_pass http://127.0.0.1:55811;
+    #proxy_buffer_size          128k;
+    #proxy_buffers              4 256k;
+    #proxy_busy_buffers_size    256k;
 }
