--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -474,16 +474,16 @@ auto_sign_up = true
 
 #################################### SMTP / Emailing ##########################
 [smtp]
-;enabled = false
-;host = localhost:25
-;user =
+enabled = true
+host = smtp.googlemail.com:587
+user = ba198647@gmail.com
 # If the password contains # or ; you have to wrap it with triple quotes. Ex """#password;"""
-;password =
+password = ojtgzpyxhsgqcqgv
 ;cert_file =
 ;key_file =
 ;skip_verify = false
-;from_address = admin@grafana.localhost
-;from_name = Grafana
+from_address = admin@grafana.localhost
+from_name = Grafana
 # EHLO identity in SMTP dialog (defaults to instance_name)
 ;ehlo_identity = dashboard.example.com
 # SMTP startTLS policy (defaults to 'OpportunisticStartTLS')
